# learning-machine

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  engine.html  genindex.html  getting_start.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: engine.doctree  environment.pickle  getting_start.doctree  getting_started.doctree  index.doctree
.doctrees/api/: engine.doctree  index.doctree  learning_machine.doctree
_modules/: index.html
_modules/learning_machine/: config.html
_modules/learning_machine/engine/: category_encoder.html  dataframe.html  date.html  engine.html  na.html  norm.html  operator.html
_sources/: engine.rst.txt  getting_start.rst.txt  getting_started.md.txt  index.rst.txt
_sources/api/: engine.md.txt  engine.rst.txt  index.rst.txt  learning_machine.md.txt
_static/: table.css
api/: engine.html  index.html  learning_machine.html
docs/: README.md
docs/source/: conf.py  getting_started.md  index.rst
docs/source/_static/: table.css
docs/source/_templates/autosummary/: class.rst
docs/source/api/: engine.md  index.rst  learning_machine.md
learning_machine/: __init__.py  config.py
learning_machine/engine/: __init__.py  category_encoder.py  dataframe.py  date.py  engine.py  engine_type.py  fourier.py  na.py  norm.py  operator.py  wrapper.py
learning_machine/projects/: __init__.py
learning_machine/registry/: registry.py
learning_machine/zoo/: __init__.py  zoo.py
